--- a/directive_templates/navdirective.html
+++ b/directive_templates/navdirective.html
@@ -6,10 +6,9 @@
     <li class="navlink-container"><a ui-sref="journal">JOURNAL</a></li>
     <li class="navlink-container"><a ui-sref="jquery">JQUERY</a></li>
     <li class="navlink-container"><a ui-sref="javascript">JAVASCRIPT</a></li>
-    <li class="navlink-container"><a ui-sref="misc">MISC</a></li>
     <li class="navlink-container"><a ui-sref="sass">CSS-SASS</a></li>
     <li class="navlink-container"><a ui-sref="angular">ANGULAR</a></li>
+    <li class="navlink-container"><a ui-sref="node">NODE</a></li>
+    <li class="navlink-container"><a ui-sref="misc">MISC</a></li>
   </ul>
 </nav>
-<!-- <aside style="color: white">This is from a directive
-  <span class="happy">scope is {{state}}</span></aside> -->
