--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <script src="./states/ecma/ecmaCtrl.js"></script>
 <script src="./states/sass/sassCtrl.js"></script>
 <script src="./states/angular/angularCtrl.js"></script>
+<script src="./states/node/nodeCtrl.js"></script>
 
 
   </body>
