adds Node state and journal entry for today

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -17,6 +17,25 @@
     </ol>
   -->
   <!-- ENTRY START -->
+  <h2 class="date">Saturday May 14th, 2017</h2>
+  <h4 class="sleep">Slept: 9 hours</h4><br><br>
+  <h3 class="subtitle">It's going well. Re-familarized with basics of node & dealing with common errors thrown. --working with Postman.
+  </h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>jquery stuff @ <a href="http://www.asmarterwaytolearn.com/jquery/21.html" target="_blank">a smarter way to learn jQuery</a></li>
+    <li>create node view</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>node view: DONE baby!</li>
+    <li>parking ticket: PAID!</li>
+    <li>created backend for app with 5 endpoints create, update, destroy, index, show (according to req.params)</li>
+    <li></li>
+  </ol>
+  <hr>
 <h2 class="date">Friday May 13th, 2017</h2>
 <h4 class="sleep">Slept: 4 hours</h4><br><br>
 <h3 class="subtitle">Very little sleep last night</h3>
