--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -14,9 +14,27 @@
     <h3>Done: </h3>
     <ol class="done">
       <li>PLACEHOLDERDONETASKS</li>
+
     </ol>
   -->
   <!-- ENTRY START -->
+  <h2 class="date">Sunday May 14th, 2017</h2>
+  <h4 class="sleep">Slept: 3 hours</h4><br><br>
+  <h3 class="subtitle">Rough Night.</h3>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>taking a break from a smarter way to learn jquery. It's too shallow--no coding projects. Ought to be used as a learning tool in tandem with building stuff.</li>
+    <li>SVG -refamiliarization!</li>
+    <li>transfer some .js that I learned from Dan Wellman's tutorials</li>
+    <li>More higher order functions!</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>I'm up to <a href="http://www.asmarterwaytolearn.com/jquery/35.html">Here #35</a> in a smarter way</li>
+
+  </ol>
+  <hr>
   <h2 class="date">Saturday May 14th, 2017</h2>
   <h4 class="sleep">Slept: 9 hours</h4><br><br>
   <h3 class="subtitle">It's going well. Re-familarized with basics of node & dealing with common errors thrown. --working with Postman.
@@ -33,6 +51,8 @@
     <li>node view: DONE baby!</li>
     <li>parking ticket: PAID!</li>
     <li>created backend for app with 5 endpoints create, update, destroy, index, show (according to req.params)</li>
+    <li>json.parse() vs json.stringify() added and concluded in ecma view.</li>
+    <li>did lots on <a target="_blank" href="http://www.asmarterwaytolearn.com/jquery/33.html">smarter way to learn jQuery</a>. It's going well!</li>
     <li></li>
   </ol>
   <hr>
