css centering entry & various styles

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,8 +20,7 @@
   <!-- ENTRY START -->
   <h2 class="date">Sunday May 14th, 2017</h2>
   <h4 class="sleep">Slept: 3 hours</h4><br><br>
-  <h3 class="subtitle">Rough Night.</h3>
-  <br>
+  <h3 class="subtitle">Rough Night.</h3> <br>
   <h3>To do:</h3>
   <ol class="todo">
     <li>taking a break from a smarter way to learn jquery. It's too shallow--no coding projects. Ought to be used as a learning tool in tandem with building stuff.</li>
