adds quiz to jquery view

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,6 +31,7 @@
   <h3>Done: </h3>
   <ol class="done">
     <li>I'm up to <a href="http://www.asmarterwaytolearn.com/jquery/35.html">Here #35</a> in a smarter way</li>
+    <li>Lots of CSS Centering.</li>
 
   </ol>
   <hr>
