--- a/states/jquery/jquery.html
+++ b/states/jquery/jquery.html
@@ -13,7 +13,30 @@
     //example snippet
   }
 </pre> -->
+<div class="simple-frame">
+  <h4 class="chtitle">Jquery Intermediate Quiz</h4>
+  $('img, div') selects both elements. What is another way?
+  <h5 class="right ans lg dkorange">$('img, div') </h5>
 
+  How would I remove all < p> tags entirely from the DOM?
+  <h5 class="right ans lg dkorange">$("p").remove(); </h5>
+
+  How to remove all < h4> tag contents but keep the elements in the DOM?
+  <h5 class="right ans lg dkorange">$("h4").empty(); </h5>
+
+  But on var x all the < p> tags that contain the word "freedom".
+  <h5 class="right ans lg dkorange">var x = $("p:contains('freedom')"); </h5>
+
+  Assign the class "vanishing" to images if they don't have it & remove it if they do.
+  <h5 class="right ans lg dkorange">$('p').toggleClass("vanishing");  </h5>
+
+  If any paragraphs contain "sad" replace their class with "happy".
+  <h5 class="right ans lg dkorange">$("p:contains('sad')").attr("class", "happy");  </h5>
+
+
+
+
+</div>
 <hr>
 <h4><a href="https://youtu.be/x_Rh6qCmN5s?list=PLHJPCYLtEMaKdvFGcFk3ud-FEJv5j5dwR">tuts+ video link</a></h4>
 <i class="dkred">
