adds to journal node and sass views

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -32,7 +32,7 @@
   <ol class="done">
     <li>I'm up to <a href="http://www.asmarterwaytolearn.com/jquery/35.html">Here #35</a> in a smarter way</li>
     <li>Lots of CSS Centering.</li>
-
+    <li>Added quiz to jquery from notes taken for intermediate selecting (smarter way to learn jquery)</li>
   </ol>
   <hr>
   <h2 class="date">Saturday May 14th, 2017</h2>
