--- a/states/sass/sass.html
+++ b/states/sass/sass.html
@@ -64,9 +64,15 @@ Then, margin-left: <em>NEGATIVE HALF the width of the box</em></div>
   transform: translate(-50%, -50%);
 }</span></pre>
 </div>
-  <h4 class="chtitle pastY">This is centered both horiz & vertically!</h4>
 
 </div>
+<div class="w60 ctrtxt">
+<br>
+<h3 class="chtitle ivr">This is centered both horiz & vertically!</h3><br>
+<img class="w20 ctrtxt" src="./img/ctrxy.png" alt="vert and horiz centering">
+<br>
+</div>
+<br>
 </div><br><hr>
   <pre>
     <!--entire page pre-->
