jquery entries and styling cleanup

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -1,7 +1,8 @@
 <aside><span class="rot90">{{state}}</span></aside>
 <div class="journal-container">
   <div class="journal-entry entry">
-    <!-- <hr>
+
+    <!--
     <h2 class="date">Friday May 13th, 2017</h2>
     <h4 class="sleep">Slept: 4 hours</h4><br><br>
     <h3 class="subtitle">Placeholder</h3>
@@ -14,10 +15,27 @@
     <h3>Done: </h3>
     <ol class="done">
       <li>PLACEHOLDERDONETASKS</li>
-
     </ol>
+    <hr />
   -->
   <!-- ENTRY START -->
+  <h2 class="date">Monday May 15th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Slept well. Almost finished with node familiarization & creating the backend for a cart. Got lots of real-life tasks.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>@extends in SASS <a target="_blank" href="https://youtu.be/YyV4nGIdpKc?list=PLCVM0tBM5nrSHdeXFJE5eXdURhL97FiyJ">Tutorial HERE</a></li>
+    <li>complete cart project in node.js <a target="_blank" href="https://vimeo.com/198244633">DM link here</a></li>
+    <li>SVG refamiliarization</li>
+    <li></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+<hr>
   <h2 class="date">Sunday May 14th, 2017</h2>
   <h4 class="sleep">Slept: 3 hours</h4><br><br>
   <h3 class="subtitle">Rough Night.</h3> <br>
