adds ES6 state to the app

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <script src="./states/sass/sassCtrl.js"></script>
 <script src="./states/angular/angularCtrl.js"></script>
 <script src="./states/node/nodeCtrl.js"></script>
+<script src="./states/es6/es6Ctrl.js"></script>
 
 
   </body>
