--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -33,7 +33,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>completed node-third tutorial --including the backend of a cart.</li>
+    <li>filled jquery with a quiz using lots of cenering learned from  <a href="https://youtu.be/hIG-fZ2042k">This dev-tips vid.</a></li>
   </ol>
 <hr>
   <h2 class="date">Sunday May 14th, 2017</h2>
