--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -19,6 +19,21 @@
     <hr />
   -->
   <!-- ENTRY START -->
+  <h2 class="date">Tuesday May 16th, 2017</h2>
+  <h4 class="sleep">Slept: X hours</h4><br><br>
+  <h3 class="subtitle">Placeholder</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Object & Array destructuring in ES6 <a href="view-source:https://vimeo.com/203515508" target="_blank">HERE!</a></li>
+    <li>Wes Bos JS 30!</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Monday May 15th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Slept well. Almost finished with node familiarization & creating the backend for a cart. Got lots of real-life tasks.</h3>
@@ -35,6 +50,7 @@
   <ol class="done">
     <li>completed node-third tutorial --including the backend of a cart.</li>
     <li>filled jquery with a quiz using lots of cenering learned from  <a href="https://youtu.be/hIG-fZ2042k">This dev-tips vid.</a></li>
+    <li>Added arrow functions as an entry in ES6</li>
   </ol>
 <hr>
   <h2 class="date">Sunday May 14th, 2017</h2>
