--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,14 +20,16 @@
   -->
   <!-- ENTRY START -->
   <h2 class="date">Tuesday May 16th, 2017</h2>
-  <h4 class="sleep">Slept: X hours</h4><br><br>
-  <h3 class="subtitle">Placeholder</h3>
+  <h4 class="sleep">Slept: 8 hours</h4><br><br>
+  <h3 class="subtitle">SVG Day.--Plus a bit of ES6.</h3>
 
   <br>
   <h3>To do:</h3>
   <ol class="todo">
     <li>Object & Array destructuring in ES6 <a href="view-source:https://vimeo.com/203515508" target="_blank">HERE!</a></li>
     <li>Wes Bos JS 30!</li>
+    <li>common uses of arrow <a href="https://vimeo.com/215725958" target="_blank">LINK</a> Also this one <a href="https://vimeo.com/216583233" target="_blank">here</a></li>
+    <li>join design site</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
