adds svg state and link styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="master.css">
-    <title>JournalWork</title>
+    <title>Code Journal 📖</title>
   </head>
   <body>
   <div class="bg-image"></div>
@@ -33,6 +33,7 @@
 <script src="./states/angular/angularCtrl.js"></script>
 <script src="./states/node/nodeCtrl.js"></script>
 <script src="./states/es6/es6Ctrl.js"></script>
+<script src="./states/svg/svgCtrl.js"></script>
 
 
   </body>
