--- a/directive_templates/navdirective.html
+++ b/directive_templates/navdirective.html
@@ -9,6 +9,7 @@
     <li class="navlink-container"><a ui-sref="sass">CSS-SASS</a></li>
     <li class="navlink-container"><a ui-sref="angular">ANGULAR</a></li>
     <li class="navlink-container"><a ui-sref="node">NODE</a></li>
+    <li class="navlink-container"><a ui-sref="svg">SVG</a></li>
     <li class="navlink-container"><a ui-sref="es6">ES6</a></li>
     <li class="navlink-container"><a ui-sref="misc">MISC</a></li>
   </ul>
