--- a/states/svg/svg.html
+++ b/states/svg/svg.html
@@ -2,23 +2,18 @@
 <div class="svg-container">
 <aside><span class="rot90">{{state}}</span></aside>
 <div class="svg-entry entry">
+<pre>
+<!-- pre for all -->
 <h3 class="w40">Interesting cursor: image trick</h3>
 as a css rule:
 <pre class="prettyprint w40">
-div {
-  cursor: url('img/finger.png'), pointer;
-}</pre>
+//code
+</pre>
   <hr>
-<h3 class="wh">Interesting point about this:</h3>
-(<span><a href="http://stackoverflow.com/questions/7479282/this-vs-this">FROM HERE</a></span>)
+<h3 class="wh">placeholder txt</h3>
 
-<pre>
-  <p>In jQuery functions, this most often refers to the actual DOM element you're dealing with, whereas $(this) returns a jQuery object that wraps the element.
 
-  In JavaScript, this always refers to the current scope. Many of jQuery's functions will set that scope to be the element you're working with.</p>
-
-  For instance
-
+<p></p>
 <pre class="prettyprint w60">
   $("#someElement").click(function() {
       this;    // the element itself
@@ -27,8 +22,10 @@ div {
 </pre>
 
 <hr>
+
 </pre>
+<!-- END of pre for all -->
 </div>
-
-
+<!-- END of pre for svg-entry div-->
 </div>
+<!-- End of svg-container div-->
