--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,20 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Tuesday May 23rd, 2017</h2>
+  <h4 class="sleep">Slept: 8 hours</h4><br><br>
+  <h3 class="subtitle">Took several days off for real life.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>SVG revfamiliarization.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Friday May 19th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Skipped a day or so: (real life stuff). Worked on lots of SVG stuff. Trying to inject it into html. Tried with a service: seems like it would require JSON.parse() from a .json file. *Clumsy<br />
@@ -32,7 +46,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Lots of SVG with Ang js</li>
   </ol>
   <hr />
   <!-- ENTRY START -->
@@ -50,7 +64,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Work on callbacks and ES6</li>
   </ol>
   <hr />
   <h2 class="date">Monday May 15th, 2017</h2>
