--- a/states/svg/svg.html
+++ b/states/svg/svg.html
@@ -21,6 +21,8 @@
 <div class="ivr"><span class="ltgreen">Elements</span>
 < g> element
 < defs> element
+< viewBox="x, y, w, h">
+preserveAspectRatio=" "
 < linearGradient> element
 < ngAttr="{{<i class="y"> scope-property </i>}}"</div>
 <div class="framed1 w80"><h3 class="ltgreen">the <b><</b>g> element</h3>
@@ -64,7 +66,67 @@ can be used to define special graphical SVG elements such as gradients, filters 
    Since SVG has its own XML definition, it doesn’t understand AngularJS expressions. That means that if you will try to use SVG attributes with data binding expressions (curly brackets), you will get an error.<br><span class="med ivr"> The work around is to prefix all the dynamic attributes with ng-attr - and then set the binding expression.</span>
 <a href="https://docs.angularjs.org/guide/interpolation" target="_blank">angular explanation for ngAttr</a> (normalized as ng-attr=" ")
 </div>
+<div class="framed2 mutedBlue"><h3 class="chtitle">< viewBox="x, y, w, h"></h3>
+viewBox w & h realign x/y coordinates.
+If higher, they "force" more 'pixels' inside the box defined by the style-rules width & height.
+Higher viewBox W and H numbers render in a quasi-higher res. --and give the effect of "zooming out".
 
+<pre class="dkbg pastY w80">  < svg width="300" height="100" viewBox="0,0,600, 200" preserveAspectRatio="xMidYMid meet">
+    < circle cx="300" cy="100" r="25" />< /circle>
+  < /svg> </pre>
+
+  <h3 class="chtitle">preserveAspectRatio</h3>
+  When the height values of styling and viewBox aren't proportional, we can use preserveAspectRatio
+  First, <i class="dkblue">preserveAspectRatio="none"</i> allows the SVG to be squeezed and stretched--Fat or squat.
+  Shrink the styled width, SVG is squeezed.
+  Shrink the styled height, SVG is mushed.
+  <h3 class="dkblue">All other than none will preserve the aspect ratio and prevent distortion.</h3>
+  <h3 class="dkblue">These can have two parameters.   <span class="ivr">X/Y "anchor" & split/meet</span></h3>
+<div class="simple-frame ivr w20 ctrtxt sm">
+  ↖️ xMinYMin -- top-left
+  ⬆️ xMidYMin -- top-middle
+  ↗️ xMaxYMin -- top-right
+  ⬅️ xMinYMid -- left-middle
+  ⏺ xMidYMid -- middle-middle
+  ➡️ xMaxYMid -- right-middle
+  ↙️ xMinYMax -- left-bottom
+  ⬇️ xMidYMax -- mid-bottom
+  ↘️ xMaxYMax -- right-bottom
+</div>
+
+<div class="w80 framed4 squat col-2 sm">Common elements
+  <ul>
+  <li>line</li>
+  <li>text</li>
+  <li>rect</li>
+  <li>circle</li>
+  <li>ellipse</li>
+  <li>polyline</li>
+  <li>use</li>
+  <li>polygon</li>
+  <li>path <span class="bg ltred"><b>*</b></span></li>
+  <li class="ivr">animate</li>
+  <li class="ivr">animate-motion</li>
+  <li class="ivr">animate-transform</li>
+  <li class="ivr">set</li>
+</ul>
+</div>
+<div class="simple-frame2">
+  <sup class="ltred"><b>*</b></sup>Paths have a path-data attr <span class="dkbg ivr"> d="..." </span>
+  paths have
+  <b class="wh">M</b> meaning moveTo,(as if the pen were lifted from the page and placed elsewhere to continue the line)
+  <b class="wh">L</b> meaning Lineto
+  <b class="wh">Z</b> meaning closePath (from current point to initial point)
+  <b class="wh">Text</b> placed according to x/y coords
+  <b class="wh">use</b> references an element or svg to be reused elsewhere.
+  <b class="wh">g</b> used to group reusables and style them separately
+  <b class="wh">symbol</b> defined graphical templates for svg objects instantiated by <i class="y"><span><</span>use></i> elements
+  <span class="y">symbols can contain their own viewBox and preserveAR attributes</span>
+
+</div>
+
+
+</div>
 
 </pre>
 <!-- End of pre for all -->
