--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,21 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Wednesday May 24th, 2017</h2>
+  <h4 class="sleep">Slept: 4 hours</h4><br><br>
+  <h3 class="subtitle">Watched a <a target="_blank" href="https://youtu.be/jGJcStZhWGI">most excellent talk</a> on programming and John Keats. Today, a directive with svg icon sprite.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>menubar replacing icons with text. GSAP</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>7 hours of Illustrator work.</li>
+    <li>I'm exhausted</li>
+  </ol>
+  <hr />
   <h2 class="date">Tuesday May 23rd, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
   <h3 class="subtitle">Took several days off for real life.</h3>
@@ -29,7 +44,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Entries in SVG section review of elements.</li>
+    <li>AI Navbar work.</li>
   </ol>
   <hr />
   <h2 class="date">Friday May 19th, 2017</h2>
@@ -47,6 +63,7 @@
   <h3>Done: </h3>
   <ol class="done">
     <li>Lots of SVG with Ang js</li>
+    <li>AI review</li>
   </ol>
   <hr />
   <!-- ENTRY START -->
